Fixing error. Images stretch in safari

--- a/style.css
+++ b/style.css
@@ -74,6 +74,54 @@ body, html{
     color: white;
 }
 
+.S1{
+    background-image: url(Screenshot1.png);
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;  
+}
+
+.S2{
+    background-image: url(Screenshot2.png);
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;  
+}
+
+.S3{
+    background-image: url(Screenshot3.png);
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;  
+}
+
+.S4{
+    background-image: url(Screenshot4.png);
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;  
+}
+
+.S5{
+    background-image: url(Screenshot5.png);
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;  
+}
+
+.S6{
+    background-image: url(Screenshot6.png);
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;  
+}
+
 .heading{
     position: relative;
     z-index: 1;
